examples/pos/insertsemi.effekt
module parser_error

def main() = {
    val x = 4
    println(x + 1)
}