examples/neg/parser_error.effekt
module parser_error

def main() = {
    val x = 4
    x + 1
}